# color_mixer

./: README.md  kubelka.py  main.py  pyproject.toml
src/: s
src/color_mixer/: app.py  hct_mixer.py  hct_tone.py  kubelka.py  spectra38.py
src/color_mixer/static/: script.js  styles.css
src/color_mixer/templates/: index.html
tests/: test_kubelka.py
